yimpexeditor/src/test/resources/errors/quotes/quoted-modifiers3.impex
# ERROR modifier assignments cannot be surrounded by single quotes. 
INSERT_UPDATE Customer; uid[unique=true];Name['default=Mario']; 
; andi; ; 
